crates/aranya-policy-compiler/tests/data/structs/field_insertion_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `a` is defined multiple times
  |
1 | struct Bar { a int }
  |              - previous defintion here
2 | struct Foo { +Bar, a string }
  |                    ^ re-defined here
